Added Lombok support