@@ -1,3 +1,6 @@
+plugins {
+    id "io.freefair.lombok"
+}
 
 apply plugin: 'java-library'
 
@@ -8,6 +11,7 @@ compileJava {
     doFirst {
         options.compilerArgs = [
                 '--module-path', classpath.asPath,
+                '--add-modules', 'lombok',
                 '--add-modules', 'java.persistence',
                 '--add-modules', 'spring.context',
                 '--add-modules', 'spring.data.jpa',
@@ -23,10 +27,10 @@ compileJava {
 dependencies {
     implementation project(':trade-application')
 
-    implementation 'javax.inject:javax.inject'
     implementation 'org.postgresql:postgresql'
+    implementation 'org.mapstruct:mapstruct-processor'
     implementation 'org.springframework:spring-beans'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
